--- a/pandas_04b.ipynb
+++ b/pandas_04b.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
        "29                     130000.0  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
        "13          United States of America"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +373,7 @@
     "countries = [\"Germany\", \"United States of America\", \"Canada\"]\n",
     "country_filter = df[\"Country\"].isin(countries)\n",
     "\n",
-    "# For some reason, pandas Series is displayed as plaintext.\n",
+    "# pandas Series is displayed as plaintext.\n",
     "# Convert to frame using to_frame() for display purposes.\n",
     "country_filtd_df = df.loc[country_filter, \"Country\"]\n",
     "display(country_filtd_df.head())\n",
