Add extra examples section

--- a/pandas_08a.ipynb
+++ b/pandas_08a.ipynb
@@ -14,18 +14,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from IPython.display import display"
+    "from IPython.display import display\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,18 +41,18 @@
     "    if s:\n",
     "        print(\"=\" * int(n / 2), s, \"=\" * int(n / 2))\n",
     "    else:\n",
-    "        print(\"=\" * n)"
+    "        print(\"=\" * n)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Stackoverflow developer survey\n",
     "df = pd.read_csv(\"data/survey_results_public_2022.csv\", index_col=\"ResponseId\")\n",
-    "schema_df = pd.read_csv(\"data/survey_results_schema.csv\", index_col=\"qname\")"
+    "schema_df = pd.read_csv(\"data/survey_results_schema.csv\", index_col=\"qname\")\n"
    ]
   },
   {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
     "display(df.describe())\n",
     "\n",
     "# Applied on a Series (single column)\n",
-    "display(df[\"ConvertedCompYearly\"].describe())"
+    "display(df[\"ConvertedCompYearly\"].describe())\n"
    ]
   },
   {
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -275,12 +275,12 @@
    "source": [
     "# Used on a df with combination of columns\n",
     "x = df.value_counts([\"ConvertedCompYearly\", \"RemoteWork\"])\n",
-    "display(x)"
+    "display(x)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
     "\n",
     "# We can multiply all the values in the Series by 100\n",
     "# to show the values in their percentage (out of 100%)\n",
-    "display(x*100)"
+    "display(x * 100)"
    ]
   },
   {
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
     "medians = df.median(numeric_only=True)\n",
     "display(medians)\n",
     "\n",
-    "# Note that CompTotal is not normalized; currencies differ"
+    "# Note that CompTotal is not normalized; currencies differ\n"
    ]
   },
   {
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
     "# Taking the median compensation\n",
     "# We will use ConvertedCompYearly as it normalizes everything to USD\n",
     "median_comp = df[\"ConvertedCompYearly\"].median()\n",
-    "display(median_comp)"
+    "display(median_comp)\n"
    ]
   },
   {
@@ -432,13 +432,13 @@
    "source": [
     "---\n",
     "## Grouping Data\n",
-    "pandas has a Group object that can be created using the `groupby()` method. This method returns a Group object.  \n",
+    "pandas has a group object that can be created using the `groupby()` method. This method returns a groupby object. There are 2 groupby objects: the DataFrame.groupby and the Series.groupby, where some methods are exlusive to each.\n",
     "\n",
     "`groupby()` takes a **by** parameter that will group rows according to the passed value. A list of labels can be passed to group entries with combinations of the labels.  \n",
     "\n",
     "\n",
-    "### Group.groups Attribute\n",
-    "Groupings of the current Group object can be viewed by the `.groups` attribute. This returns a dict of the groupings of group \\<group_label\\>:\\<list_of_indexes_of_that_group\\> key:value pairs.\n",
+    "### groupby.groups Attribute\n",
+    "Groupings of the current groupby object can be viewed by the `.groups` attribute. This returns a dict of the groupings of group \\<group_label\\>:\\<list_of_indexes_of_that_group\\> key:value pairs.\n",
     "\n",
     "---"
    ]
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -470,17 +470,17 @@
     }
    ],
    "source": [
-    "# First we create a pandas Group object:\n",
+    "# First we create a DataFrame.groupby object:\n",
     "country_group = df.groupby(\"Country\")\n",
     "\n",
     "# View groups\n",
     "groups = country_group.groups\n",
-    "display(groups)"
+    "display(groups)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
    "source": [
     "# Check frequency of org size on grouped countries\n",
     "grouped_freq = country_group[\"OrgSize\"].value_counts()\n",
-    "display(grouped_freq.head(25))"
+    "display(grouped_freq.head(25))\n"
    ]
   },
   {
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -631,10 +631,9 @@
     }
    ],
    "source": [
-    "# Select subsets in grouped frequency\n",
-    "\n",
     "display(grouped_freq)\n",
     "printhr()\n",
+    "# Select subsets in grouped frequency\n",
     "\n",
     "# Germany\n",
     "germany_freq = grouped_freq.loc[\"Germany\"]\n",
@@ -642,7 +641,7 @@
     "\n",
     "# Multiple countries\n",
     "multiple_freq = grouped_freq.loc[[\"Japan\", \"India\", \"China\"]]\n",
-    "display(multiple_freq)"
+    "display(multiple_freq)\n"
    ]
   },
   {
@@ -661,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -690,12 +689,12 @@
     "# Get median of yearly salary (USD) of each country\n",
     "comp_group = country_group[\"ConvertedCompYearly\"]\n",
     "comp_median = comp_group.median()\n",
-    "display(comp_median)"
+    "display(comp_median)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +843,7 @@
     "\n",
     "# Get same stats for USA\n",
     "comp_stats_usa = comp_stats.loc[\"United States of America\"]\n",
-    "display(comp_stats_usa)"
+    "display(comp_stats_usa)\n"
    ]
   },
   {
@@ -860,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -928,12 +927,12 @@
     "x = num_df.agg([\"median\", \"mean\"])\n",
     "display(x)\n",
     "\n",
-    "# Note that CompTotal is not normalized; currencies differ"
+    "# Note that CompTotal is not normalized; currencies differ\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -951,7 +950,48 @@
    "source": [
     "# agg() on Series\n",
     "x = df[\"ConvertedCompYearly\"].agg([\"median\", \"mean\"])\n",
-    "display(x)"
+    "display(x)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## More Examples on Exploring Data\n",
+    "\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### How many developers from Japan knows Python?\n",
+    "We can create a filter for both the conditions (Japan, and Python), and count how the True values from the filter either by using previously `value_counts()` or by the `sum()` method.  \n",
+    "\n",
+    "`sum()` is normally used on numerical values, but it can also work on Booleans; it returns the count of True values.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Filter respondents who is in Japan\n",
+    "filt_country = df[\"Country\"] == \"Japan\"\n",
+    "\n",
+    "# Filter for respondents that works with Python\n",
+    "# This will result to a filter of respondents who works in Japan AND works with Python\n",
+    "# dropna() drops NaN values because some respondents did not fill out the question.\n",
+    "filt = df.loc[filt_country][\"LanguageHaveWorkedWith\"].str.contains(\"Python\").dropna()"
    ]
   }
  ],
